--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,5 @@
     <string name="app_name">AppWidgetSample</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
-    <string name="date_count_format">#%1$d @%2$s</string>
-    <string name="widget_button_update">Update now</string>
+    <string name="date_count_format">\@%1$s</string>
 </resources>
